2013-08-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support for automated catalogue publication.

	* Makefile.comm.in (published): New build goal; it redirects to the
	new primary goal implemented...

	* Makefile.in: ...here.
	(published): New primary build goal; implement it, using...
	(frs-username-check, frs-publish): ...these new internal build goals;
	implement them; they should not normally be invoked directly.
	(FRS_USERNAME, FRS_CATALOGUE): New macros; define them.
	(FRS_CATALOGUE_HOST, FRS_CATALOGUE_ROOT, FRS_CATALOGUE_PATH):
	(MAKE_RECURSIVE, PRIMARY_GOALS): Likewise.

	* configure.ac (AC_INIT): Bump version number to 2.2
	(FRS_USERNAME): Declare it as precious; assign "anonymous" as default.

2013-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a catalogue publication anomaly.

	* mingw32/mingw32-zlib.xml: Correct typos.
	(zlib-1.2.8-1.mingw32-*.tar.lzma): Such malformed file references...
	(zlib-1.2.8-1-mingw32-*.tar.lzma): ...should have appeared thus.

	* common/issue.log mingw32/issue.log: References to...
	(package-list.xml, mingw32-package-list.xml, mingw32-zlib.xml):
	...these automatically updated; publish lzma compressed copies to FRS.

2013-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add integration hooks for mingw-get-setup.

	* Makefile.in Makefile.comm.in:
	(build.tag, clean, dist, distclean, maintainer-clean): New targets;
	implement them as no-ops; they are required when invoked recursively,
	as a sub-make of mingw-get-setup, but are not otherwise needed here.

2013-08-25  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-gmp.xml: Add 5.1.2-1 release.
	* mingw32/mingw32-mpfr.xml: Add 3.1.2-1 release.
	* mingw32/mingw32-mpc.xml: Add 1.0.1-1 release.
	* mingw32/mingw32-pthreads-w32.xml: Add 2.9.1-1 release.
	* mingw32/mingw32-zlib.xml: Add the 1.2.8-1 release.
	* common/issue.log mingw32/issue.log: Update accordingly.
	* .gitignore: Add .*.swp.
